[project]
name = "DSA"
version = "1.0.1"
description = "Dynamical Similarity Analysis"
readme = "README.md"
authors = [
    { name = "Mitchell Ostrow", email = "ostrow@mit.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "torch>=1.3.0",
    "kooplearn>=1.1.0",
    "pytest>=3.7",
    "pot",
    "omegaconf",
]

[project.urls]
Homepage = "https://github.com/mitchellostrow/DSA"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
